Fetch en mi proyecto

--- a/pages/diasespeciales.html
+++ b/pages/diasespeciales.html
@@ -75,6 +75,6 @@
         <a href="#">Whatsapp</a>
         </div>
       </footer>
-      
+      <script src="../Js/main.js"></script>
 </body>
 </html>
