botondeAgregar+aviso+carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Hoja de stilo -->
  <link rel="stylesheet" href="../style.css">
-     <title>Dias especiales | Mega Burguer</title>
+     <title>CARRITO | Mega Burguer</title>
  </head>
  <body class="">
      <header>
          <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center">
              <div class="container-fluid">
-               <a class="navbar-brand" href="index.html">MEGA Burguer</a>
+               <a class="navbar-brand" href="../index.html">MEGA Burguer</a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                </button>
@@ -47,24 +47,15 @@
                    </li>
                  </ul>
                  <form class="d-flex">
-                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                   <input id="inputSearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                    <button class="btn btn-outline-success" type="submit">Buscar</button>
                  </form>
                </div>
              </div>
            </nav>                   
      </header>
-     <main>
-       <div class="container-fluid h-100 text-center">
-       <div class="row">
-       <div class="col-xs-12 col-sm-4 col-lg-3 azul">lunes</div>
-       
-       <div class="col-xs-12 col-sm-4 col-lg-3 azulc">Martes</div>
-       <div class="col-xs-12 col-sm-4 col-lg-3 azulmc">miercoles</div>
-       <div class="col-xs-12 col-sm-4 col-lg-3 azulmmc">Domingo</div>
-      </div>
-      </div>
-    </div>
+     <main id="carrito">
+        <!--codigo inyectado desde JS-->
      </main>
      <footer>
       <div class="col-lg-12 h-100 rrss">
