--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="./pages/diasespeciales.html">Dias especiales</a>
+                    <a class="nav-link active" href="./pages/carrito.html">CARRITO</a>
                   </li>
                   <li class="nav-item">
                   </li>
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                  <button class="btn-outline-success">Buscar</button>
                 </form>
               </div>
             </div>
@@ -121,7 +121,7 @@
 
     </main>
     <footer>
-    <div class="col-lg-12 rrss">
+    <div class="col-12 rrss">
 
       <h4 class="text-center p-2"> Siguenos en nuestras redes sociales</h4>
       <a href="#">Intagram</a>
