--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,7 +24,7 @@
                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                </li>
                <li class="nav-item">
-                 <a class="nav-link active" href="./pages/diasespeciales.html">Dias especiales</a>
+                 <a class="nav-link active" href="../pages/carrito.html">CARRITO</a>
                </li>
                <li class="nav-item dropdown">
                  <a class="nav-link active dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
