--- a/pages/menu.html
+++ b/pages/menu.html
@@ -26,7 +26,7 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="../pages/diasespeciales.html">Dias especiales</a>
+                    <a class="nav-link active" href="../pages/carrito.html">CARRITO</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link active dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,7 +49,7 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <input id="inputSearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
               </div>
