--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   </li>
                 </ul>
                 <form class="d-flex m-20">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <input class="form-control me-2" id="inputSearch" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn-outline-success">Buscar</button>
                 </form>
               </div>
